--- a/Personal Profile.html
+++ b/Personal Profile.html
@@ -15,10 +15,13 @@
         p {
           font-size: 30px;
           color: black;
+          font-family: arial;
         }
-
+        body {
+          background-color: lightgreen;
+        }
         .sidebar {
-         height: 2000px;
+         height: 2100px;
          width: 150px;
          position: sticky;
          top: 0px;
@@ -26,12 +29,14 @@
          margin-top: 100px;
          padding-top: 40px;
          background-color: lightblue;
+         z-index: 100;
          }
 
          .sidebar div {
          padding: 8px;
          font-size: 24px;
          display: block;
+
          }
 
          .myButton {
@@ -55,7 +60,15 @@
          .myButton:active {
          background: #144E75; }
 
-        body {background-color: beige;}
+         #Image1{
+           height:auto;
+           max-width:600px;
+           }
+
+           #Image2{
+             height:auto;
+             max-width:980px;
+             }
     </style>
   </head>
 <body>
@@ -74,13 +87,22 @@
       <p>
       <img src="myersbriggs.jpg" alt="MyersBriggs Results" style="float:right" id="Image1";>
 
-      Myers-Briggs Test: Advocate (INFJ-T) <br>
-      VARK Questionnaire: Learning preference is Multimodal.<br>
-      Big Five Personality Test:
-      <!-- <img src="https://raw.githubusercontent.com/Zenithon2022/Assessment-Item-1/main/big%205%20personality%20test.jpg" alt="Big 5 Personality Result" style="width:1000px" style="float:right" id="Image2";><br>  -->
-      The results of these tests show me that I am very reserved, but I value honest relationships with others. Whilst I may not have a large number of friends, I am more comfortable spending them with those I am familiar with. It also shows that I do not have a set learning preference. My preferences include learning from a wide range of stimuli, from listening to studying with diagrams and charts. It also shows that I enjoy pursuing ideas and concepts when dealing with problems and day to day life. <br><br>
-      In a team setting, my results may influence how I contribute and take feedback from others. The INFJ-T personality is a very introverted personality. They would prefer not to ask for help from others and trouble them if not necessary. When taking feedback from others, if an idea is not aligned with them, they may react quite defensively. Additionally, INFJ-T personalities have a perfectionist mindset and are very prone to burn out. When working together on a project, the perfectionist mindset may lead to continually thinking of ways to improve something (and hence lead to more time spent), when the end result may not be ideal.<br><br>
-      Whilst some of these disadvantages may be detrimental when working a group, there are several ways around this. The first way is to be open to other opinions in a group, especially towards criticism. There is more than one way to reach the end result, but sometimes compromises need to be made. I should be wearier of this fact, to avoid any unnecessary arguments with team members. The perfectionist mindset does not help the group, it creates unneeded stress and anxiety. A way around this is to adjust my standards and look at everything from the big picture. By spending less time on minute details and focusing on the important aspects of the project, this would lead to better efficiency and output in the long run.
+
+      <p style="font-size:30px; color:black; text-align:center; font-weight:bold">Myers-Briggs Test: Turbulent Advocate (INFJ-T)</p> <br>
+      <p style="font-size:30px;color:black; text-align:center;font-weight:bold">Learning Style: Visual Learner.</p><br>
+      <p style="font-size:30px; color:black; text-align:center;font-weight:bold">Big Five Personality Test: </p><br>
+       <p><b style="font-weight:bold">O</b>penness: How open I am to new experiences and ideas.</p>
+       <p><b style="font-weight:bold">C</b>onscientiousness: How organized, persistent and ambitious I am.</p>
+        <p><b style="font-weight:bold">E</b>xtraversion: How energized I am in social situations.</p>
+          <p><b style="font-weight:bold">A</b>greeableness: How much I put others before myself.</p>
+          <p>  <b style="font-weight:bold">N</b>euroticism: How sensitive I am when exposed to negative emotions or stress.
+            </p>
+<img src="big5.jpg" style="width:1000px" style="float:" id="Image2";>
+
+
+    <p>The result of the 1st test result shows me that I am very reserved, but I value honest relationships with others. Despite not having a large number of friends, I am more comfortable spending time with those I am familiar with. I may also focus so much on a goal that I don’t look after myself. The results also show that I don’t deal with criticism very well on an emotional level, especially when my intentions don’t align with others. The 2nd test shows that I am mainly a visual learner, and I learn best when I can visualize the material in my head. Colour stimulus and videos are also very helpful in cementing the knowledge for me.  The 3rd test reinforces my 1st test in the introversion/extroversion aspect, but also shows that I am very open to new ideas and concepts. Additionally, it shows that I am ambitious, and will sometimes put others above myself.  </p><br><br>
+   <p>In a team setting, my results may influence how I contribute and take feedback from others. The INFJ-T personality is a very introverted personality. They would prefer not to ask for help from others and trouble them if not necessary. As a very introverted individual, there may be an issue with the project but I don’t speak up, as to avoid unnecessary hassle. My goals may not always align with other team members, especially in a project, where everyone can have a different opinion. This could lead to an argument if I am adamant on proposing an idea or concept. INFJ-T personalities have a perfectionist mindset and are very prone to burn out. When working together on a project, the perfectionist mindset may lead to continually thinking of ways to improve something (and hence lead to more time spent), when the end result may not be ideal. In terms of learning, since I am quite visual in my learning style, it would be very helpful for me if there was a visual aid, such as a PowerPoint or Diagrams, as it would be more engaging to me. </p> <br><br>
+  <p>Whilst some of these disadvantages may be detrimental when working a group, there are several ways around this. The first way is to be open to other opinions in a group, especially towards criticism. There is more than one way to reach the end result, but sometimes compromises need to be made. I should be aware of this fact, to avoid any unnecessary arguments with team members. Being introverted shouldn’t stop me from voicing ideas or opinions, as the whole point of a project is to work together towards an end goal. The perfectionist mindset does not help the group, as it creates unneeded stress and anxiety. A way around this is to adjust my standards and look at everything from the big picture. By spending less time on minute details and focusing on the important aspects of the project, this would lead to better efficiency and output in the long run.
 
       </p> <br><br><br>
 </main>
