--- a/Ideal job.html
+++ b/Ideal job.html
@@ -1,87 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet">
-          <style>
-            body {background-color:beige;}
-            body {
-                        font-family: 20px/20px "Open Sans";,
-
-                     }
-                     h1 {
-                        color: black;
-                        font-size: 30px;
-                        font-weight: bold;
-                        margin-bottom: 6px;
-                        width:100%;
-                     }
-
-                     body {
-                       background-color: lightgreen;
-                     }
-
-                     p {
-                       font-size:30px;
-                       color: black;
-
-
-                     }
-
-                     a{
-                       color:blue;
-                     }
-
-                     .responsive1 {
-                       width: 600px;
-                       height: auto;
-                       float: right;
-                     }
-
-                        .sidebar {
-                         height: 2000px;
-                         width: 150px;
-                         position: sticky;
-                         top: 0px;
-                         float: left;
-                         margin-top: 100px;
-                         padding-top: 40px;
-                         background-color: lightblue;
-                         z-index: 100;
-                         }
-
-                         .sidebar div {
-                         padding: 8px;
-                         font-size: 24px;
-                         display: block;
-                         }
-
-                         .body-text {
-                         margin-right: 300px;
-                         font-size: 18px;
-                         }
-                         .myButton {
-                         color: rgb(1, 1, 3); font-size: 26px; line-height: 26px; padding: 16px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-                         .myButton:hover {
-                         background: #1C6EA4; }
-                         .myButton:active {
-                         background: #144E75; }
-
-                         .myButton2{
-                         color: rgb(1, 1, 3); font-size: 26px; line-height: 26px; padding: 16px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-                         .myButton:hover {
-                         background: #1C6EA4; }
-                         .myButton:active {
-                         background: #144E75; }
-
-                         .myButton3{
-                         color: rgb(1, 1, 3); font-size: 26px; line-height: 26px; padding: 16px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-                         .myButton:hover {
-                         background: #1C6EA4; }
-                         .myButton:active {
-                         background: #144E75; }
-
-    </style>
-  </head>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+            </head>
 <body>
 <main>
 
