--- a/Project.html
+++ b/Project.html
@@ -1,145 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet">
-          <style>
-
-          body {
-            background-color: lightgreen;
-          }
-
-        #header {
-          font-size:30px
-          color: black;
-        }
-        p {
-          font-size: 30px;
-          color: black;
-          font-family: arial;
-        }
-
-        h1 {
-           color: black;
-           font-size: 40px;
-           font-weight: bold;
-           margin-bottom: 6px;
-           width:100%;
-           background-color:steelblue;"
-           text-align: center;
-        }
-        h2 {
-          color: black;
-          font-size: 40px;
-          font-weight: bold;
-          margin-bottom: 6px;
-          width:100%;
-          background-color:steelblue;"
-          text-align: center;
-        }
-        h3 {
-          color: black;
-          font-size: 40px;
-          font-weight: bold;
-          margin-bottom: 6px;
-          width:100%;
-          background-color:steelblue;"
-          text-align: center;
-        }
-        h4 {
-            color: black;
-            font-size: 40px;
-            font-weight: bold;
-            margin-bottom: 6px;
-            width:100%;
-            background-color:steelblue;"
-            text-align: center;
-          }
-
-          h5 {
-              color: black;
-              font-size: 40px;
-              font-weight: bold;
-              margin-bottom: 6px;
-              width:100%;
-              background-color:steelblue;"
-              text-align: center;
-            }
-
-            h6 {
-                color: black;
-                font-size: 40px;
-                font-weight: bold;
-                margin-bottom: 6px;
-                width:100%;
-                background-color:steelblue;"
-                text-align: center;
-              }
-
-        .sidebar {
-         height: 2000px;
-         width: 150px;
-         position: sticky;
-         top: 0px;
-         float: left;
-         margin-top: 100px;
-         padding-top: 40px;
-         background-color: lightblue;
-         z-index: 100;
-         }
-
-         .sidebar div {
-         padding: 8px;
-         font-size: 24px;
-         display: block;
-
-         }
-
-         .myButton {
-         color: rgb(1, 1, 3); font-size: 26px; line-height: 26px; padding: 16px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-         .myButton:hover {
-         background: #1C6EA4; }
-         .myButton:active {
-         background: #144E75; }
-
-         .myButton2{
-         color: rgb(1, 1, 3); font-size: 25px; line-height: 26px; padding: 10px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-         .myButton:hover {
-         background: #1C6EA4; }
-         .myButton:active {
-         background: #144E75; }
-
-         .myButton3{
-         color: rgb(1, 1, 3); font-size: 26px; line-height: 26px; padding: 16px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-         .myButton:hover {
-         background: #1C6EA4; }
-         .myButton:active {
-         background: #144E75; }
-
-         .myButton4{
-         color: rgb(1, 1, 3); font-size: 26px; line-height: 26px; padding: 16px; border-radius: 10px; font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif; font-weight: normal; text-decoration: none solid rgb(68, 68, 68); font-style: italic; font-variant: small-caps; text-transform: none; background-image: linear-gradient(to right, rgb(28, 110, 164) 0%, rgb(35, 136, 203) 100%, rgb(20, 78, 117) 100%); box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 47px 0px; border: 0px solid rgb(28, 110, 164); display: inline-block;}
-         .myButton:hover {
-         background: #1C6EA4; }
-         .myButton:active {
-         background: #144E75; }
-
-         #Image1{
-           height:570px;
-           max-width:500px;
-           }
-
-           #Image2{
-             height:400px;
-             max-width:1000px;
-             }
-
-             #Image3{
-               height:380px;
-               max-width:1000px;
-               }
-
-
-
-    </style>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+          
   </head>
 <body>
 <main>
