--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <div class="sidebar">
 <nav>
-<a href="http://127.0.0.1:3000/Ideal%20job.html" class=myButton>Ideal Job</a>
-<a href="http://127.0.0.1:3000/Personal%20Profile.html?" class=myButton2>Personal Profile</a>
-<a href="http://127.0.0.1:3000/Project.html" class=myButton3>Project</a>
+<a href="Ideal Job.html" class=myButton>Ideal Job</a>
+<a href="Personal Profile.html" class=myButton2>Personal Profile</a>
+<a href="Project.html" class=myButton3>Project</a>
 </nav>
 </div>
 
