--- a/Ideal job.html
+++ b/Ideal job.html
@@ -87,9 +87,9 @@
 
   <div class="sidebar">
   <nav>
-  <a href="http://127.0.0.1:3000/Front%20page.html" class=myButton>About Me</a>
-  <a href="http://127.0.0.1:3000/Personal%20Profile.html?" class=myButton2>Personal Profile</a>
-  <a href="http://127.0.0.1:3000/Project.html" class=myButton3>Project</a>
+  <a href="index.html" class=myButton>About Me</a>
+  <a href="Personal Profile.html" class=myButton2>Personal Profile</a>
+  <a href="Project.html" class=myButton3>Project</a>
   </nav>
   </div>
 
