--- a/Personal Profile.html
+++ b/Personal Profile.html
@@ -8,9 +8,9 @@
 
   <div class="sidebar">
   <nav>
-  <a href="http://127.0.0.1:3000/Front%20page.html" class=myButton>About Me</a>
-  <a href="http://127.0.0.1:3000/Ideal%20job.html" class=myButton2>Ideal Job</a>
-  <a href="http://127.0.0.1:3000/Project.html" class=myButton3>Project</a>
+  <a href="index.html" class=myButton>About Me</a>
+  <a href="Ideal Job.html" class=myButton2>Ideal Job</a>
+  <a href="Project.html" class=myButton3>Project</a>
   </nav>
   </div>
 
