--- a/Project.html
+++ b/Project.html
@@ -9,10 +9,10 @@
 
   <div class="sidebar">
   <nav>
-  <a href="http://127.0.0.1:3000/Front%20page.html" class=myButton>About Me</a>
-  <a href="http://127.0.0.1:3000/Ideal%20job.html" class=myButton2>Ideal Job</a>
-  <a href="http://127.0.0.1:3000/Personal%20Profile.html?" class=myButton3>Personal Profile</a>
-  <a href="http://127.0.0.1:3000/Reference.html" class=myButton4>Reference List for Project</a>
+  <a href="index.html" class=myButton>About Me</a>
+  <a href="Ideal Job.html" class=myButton2>Ideal Job</a>
+  <a href="Personal Profile.html" class=myButton3>Personal Profile</a>
+  
   </nav>
   </div>
 
