--- a/Personal Profile.html
+++ b/Personal Profile.html
@@ -17,7 +17,7 @@
 
       <h1 style="font-size:40px;background-color:steelblue; text-align: center;">Personal Profile</h1>
       <p>
-      <img src="myersbriggs.jpg" alt="MyersBriggs Results" style="float:right" id="Image1";>
+      <img src="Images\myersbriggs.jpg" alt="MyersBriggs Results" style="float:right" id="Image1";>
 
 
       <p style="font-size:30px; color:black; text-align:center; font-weight:bold">Myers-Briggs Test: Turbulent Advocate (INFJ-T)</p> <br>
@@ -29,7 +29,7 @@
           <p><b style="font-weight:bold">A</b>greeableness: How much I put others before myself.</p>
           <p>  <b style="font-weight:bold">N</b>euroticism: How sensitive I am when exposed to negative emotions or stress.
             </p>
-<img src="big5.jpg" style="width:1000px" style="float:" id="Image2";>
+<img src="Images\big5.jpg" alt="big5 results" style="width:1000px" style="float:" id="Image2";>
 
 
     <p>The result of the 1st test result shows me that I am very reserved, but I value honest relationships with others. Despite not having a large number of friends, I am more comfortable spending time with those I am familiar with. I may also focus so much on a goal that I don’t look after myself. The results also show that I don’t deal with criticism very well on an emotional level, especially when my intentions don’t align with others. The 2nd test shows that I am mainly a visual learner, and I learn best when I can visualize the material in my head. Colour stimulus and videos are also very helpful in cementing the knowledge for me.  The 3rd test reinforces my 1st test in the introversion/extroversion aspect, but also shows that I am very open to new ideas and concepts. Additionally, it shows that I am ambitious, and will sometimes put others above myself.  </p><br><br>
