--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="sidebar">
 <nav>
-<a href="Ideal Job.html" class=myButton>Ideal Job</a>
+<a href="Ideal job.html" class=myButton>Ideal Job</a>
 <a href="Personal Profile.html" class=myButton2>Personal Profile</a>
 <a href="Project.html" class=myButton3>Project</a>
 </nav>
