--- a/Personal Profile.html
+++ b/Personal Profile.html
@@ -9,7 +9,7 @@
   <div class="sidebar">
   <nav>
   <a href="index.html" class=myButton>About Me</a>
-  <a href="Ideal Job.html" class=myButton2>Ideal Job</a>
+  <a href="Ideal job.html" class=myButton2>Ideal Job</a>
   <a href="Project.html" class=myButton3>Project</a>
   </nav>
   </div>
