--- a/Project.html
+++ b/Project.html
@@ -10,7 +10,7 @@
   <div class="sidebar">
   <nav>
   <a href="index.html" class=myButton>About Me</a>
-  <a href="Ideal Job.html" class=myButton2>Ideal Job</a>
+  <a href="Ideal job.html" class=myButton2>Ideal Job</a>
   <a href="Personal Profile.html" class=myButton3>Personal Profile</a>
   
   </nav>
