--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 </nav>
 </div>
 
-<h2 style="font-size:40px; border:12px ;background-color:steelblue; text-align:center;">Personal Information</h2>
+<h2 style="font-size:40px; border:12px ;background-color:steelblue;">Personal Information</h2>
         <p>Hello! My name is Zenithon Ho, but people call me <strong>Zen</strong> for short. <img src= "Images\photo.jpg" alt="Image of Zen" class="responsive1"> My name derives from the Arabic word ‘Zenith’, meaning the highest point. Before I was born, my parents found out they were going to have a son, so they decided to add -son to Zenith. As Zenithson didn’t roll off the tongue very well, they removed the s, and were left with Zenithon. My student number is <em>s3951225</em>, and student e-mail is s3951225@student.rmit.edu.au. Both my parents are from Hong Kong, but I was born in Australia. I have completed a Bachelor of Medical Imaging Science at QUT, and I am studying a Bachelor of Information Technology at RMIT, via OUA. My first language is English, followed closely by Cantonese. In my spare time, I play an online card game called Magic the Gathering: Arena, where I compete against other players whilst collecting cards. I mainly enjoy playing puzzle games, but also enjoy playing first person shooter games on my Xbox One S, such Halo: The Master Chief Collection.
 
         </p> 
 
 
-        <h3 style="font-size:40px; background-color:steelblue; text-align:center;">Interest in IT</h3>
+        <h3 style="font-size:40px; background-color:steelblue;">Interest in IT</h3>
         <p>My interest in IT started when I was a very young age. I remember being absolutely fascinated by the dial-up modem when my father started up the internet connection (in the 90’s). The simple act of being connected to the world wide web and accessing information from our computer captivated me. As time progressed, and technology became more advanced, it was more difficult to keep up to the growing trends. Despite this, I am extremely keen to jump into IT, as there is always more to learn. Whether it be artificial intelligence or machine learning, having a sound knowledge in IT will help in many aspects of daily life. </p>
 
         <p>At this point, I do not have any IT experience from universities. I have become drawn to programming in different languages, such as Python, JavaScript and Kotlin. My only knowledge of the languages are some small lessons done on websites such as freecodecamp.com and Codecademy. I have chosen to come to RMIT as I believe it will be the first stepping stone into a career in IT. Whilst I am interested in the programming side of IT, there are many other topics in IT that could also be beneficial to me. Through my studies at RMIT I would be expecting to learn how I would be integrating into the IT profession. Skills such as coding, machine learning, analysing and solving problems in the IT industry.</p>
