--- a/Personal Profile.html
+++ b/Personal Profile.html
@@ -15,7 +15,7 @@
   </div>
 
 
-      <h1 style="font-size:40px;background-color:steelblue;">Personal Profile</h1>
+      <h1 align=center style="font-size:40px;background-color:steelblue;">Personal Profile</h1>
       <p>
       <img src="Images\myersbriggs.jpg" alt="MyersBriggs Results" style="float:right" id="Image1";>
 
