--- a/Ideal job.html
+++ b/Ideal job.html
@@ -17,7 +17,7 @@
 
 
   <h1 style="font-size:40px;background-color:steelblue;">Ideal Job</h1> 
-  <p stlye="font-family: arial"><img src= "Images\Job.jpg" alt="Ideal Job Seek" class="responsive2"> My ideal job is a position with a company called “White Bay Search” in Sydney. The job description is pictured on the right. Alternatively, this is the <a href="https://www.seek.com.au/job/56172757?type=standout#sol=b99f863caed3ab2d0bcf77de864ff322e8e7c376" target="_blank">job advertisement</a> on seek.
+  <p style="font-family: arial"><img src= "Images\Job.jpg" alt="Ideal Job Seek" class="responsive2"> My ideal job is a position with a company called “White Bay Search” in Sydney. The job description is pictured on the right. Alternatively, this is the <a href="https://www.seek.com.au/job/56172757?type=standout#sol=b99f863caed3ab2d0bcf77de864ff322e8e7c376" target="_blank">job advertisement</a> on seek.
   The position is working as a full stack developer alongside a growing ASX-listed business. This particular job is appealing to me as it would utilize my problem solving and project development skills, whilst progressing with the company. The job would allow me to continually develop my programming skills in a competitive environment, as well as delivering quality results for clients.</p>
 
   <p>The qualifications and experience required for the position include: At least 2 years of being a full stack developer, with backend experience in Microsoft.Net (C#) and Typescript. Frontend experience in ReactJS using Typescript (with JavaScript also a strength). With knowledge in CSS, HTML, .NetCore and .Net5/6 experience being highly valued.  </p>
