--- a/Project.html
+++ b/Project.html
@@ -16,7 +16,7 @@
   </nav>
   </div>
 
-  <h1 align=center style="background-color:steelblue;"->Overview</h1>
+  <h1 align=left style="background-color:steelblue;"->Overview</h1>
   <p> The project I have chosen is an application that uses machine learning to assist doctors in diagnosing COVID-19 on Chest X-rays. As Chest X-rays have always been the preliminary imaging exam for diagnosing COVID-19, the use of technology could not only predict the severity of COVID-19, but also help in the prognosis of the illness. By utilizing Convolutional Neural Networks (CNN), coupled with large datasets of Chest X-ray images, I would aim to train such an application to recognize and differentiate between a normal Chest X-ray, and someone with COVID-19. Such an application could be used in both hospital and suburban practices, allowing severe COVID-19 patients to be treated as soon as possible. </p>
 
 
