--- a/Personal Profile.html
+++ b/Personal Profile.html
@@ -18,7 +18,7 @@
       <h1 align=center style="font-size:40px;background-color:steelblue;">Personal Profile</h1>
       <p>
       <img src="Images\myersbriggs.jpg" alt="MyersBriggs Results" style="float:right" id="Image1";>
-
+      <img src="Images\Learningstyle.jpg" alt="Learning Style Results" style="float:right" id="Image";>
 
       <p style="font-size:30px; color:black; text-align:center; font-weight:bold">Myers-Briggs Test: Turbulent Advocate (INFJ-T)</p> <br>
       <p style="font-size:30px;color:black; text-align:center;font-weight:bold">Learning Style: Visual Learner.</p><br>
